
- 1.42 released -

VM console input is no longer logged to stdout, to keep it from
appearing twice when echoed by the VM.

Fix VM console output appearing twice in interact mode (again).

Add support for gxemul as a new VMM and NetBSD/pmax as a new guest.
From Utkarsh Anand.

Increase the default test timeout to 24 hours, as the tests now
take much longer to run than before due to a combination of
the addition of new tests and qemu performance regressions.

Added target support for NetBSD/evbarm-earmv7hf, from Utkarsh Anand.
This installs from a pre-built image rather than using sysinst.

When installing from a file: URL or local path, avoid creating
unnecessary copies of the release files.  From Utkarsh Anand.

New command line option --tests for explicitly selecting the the Kyua
test framework instead of ATF, from Utkarsh Anand.

- 1.41 released -

If the VMM exits unexpectedly while running the ATF tests or some
other shell command, log the exit status and the signal that caused it
to exit (if any).

Log the qemu version used to stdout.

Fix reference to uninitialized variable when reporting a
timeout waiting for VM halt confirmation.

Increase default child timeout from 300 to 600 seconds
to support VMMs where power-up takes a long time.

Increase child.delayafterclose and child.delayafterterminate
to support VMMs where power-down takes a long time.

Run more network diagnostics after failed network installs.

Add timestamps to structured log output.

- 1.40 released -

Work around a bug in the urllib library of Python 2.7.12 that causes
FTP transfers to fail with the error message "[Errno ftp error] 200
Type set to I"; see https://bugs.python.org/issue27973.

When halting the child results in an EOF, don't print the exception
since that may be confused with a failure.

Run vmstat -s at the end of the ATF tests to help diagnose issues
like excessive paging due to insufficient memory.

Increase the default of the --test-timeout option from 3 hours to 8