@@ -1,4 +1,6 @@
 
+Log interactive mode input and output to the structured log file.
+
 - 1.42 released -
 
 VM console input is no longer logged to stdout, to keep it from
